--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  -ms-overflow-style: none;  /* IE and Edge  hide scrollbar*/
+  scrollbar-width: none;  /* Firefox hide scrollbar*/
 }
 
 code {
